# axiom-hive-tauri

./: .gitignore  LICENSE  README.md  SECURITY.md
docs/: PHILOSOPHY.md  architext.md
sidecar/: main.py  requirements.txt
src/: main.js
src-tauri/: Cargo.toml  sidecar_manifest.json  tauri.conf.toml
src-tauri/src-tauri/src/: main.rs
