[package]
name = "axiom-hive"
version = "1.0.0"
edition = "2021"
authors = ["Axiom Hive Engineering"]
description = "Sovereign Local AI Reasoning Engine"
license-file = "../LICENSE"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
